deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: udl-rating
  labels:
    name: udl-rating
    app: udl-rating-framework
